Opened 14 years ago
Closed 13 years ago
#227 closed bug (fixed)
[kernel] memory and semaphore leaks
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | critical | Milestone: | R1 |
Component: | System/Kernel | Version: | |
Keywords: | Cc: | umccullough@… | |
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
You could see memory and semaphore leaks running sysinfo in terminal several times.
Change History (9)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
That's a known missing feature: when a team is forked (which happens when you start something from the shell), the shell's areas are copied-on-write, and that requires some new VM structures (which have semaphores as well). After an exec() these structures could be freed, but that's not done yet.
comment:4 by , 14 years ago
Cc: | added |
---|
comment:5 by , 14 years ago
Cc: | added |
---|
comment:6 by , 14 years ago
Summary: | Haiku memory and semaphore leaks → [kernel] memory and semaphore leaks |
---|
comment:7 by , 13 years ago
Platform: | → All |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev19041.
comment:8 by , 13 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Checked with hrev19863 and it seems that this bug is still here, reopening?
comment:9 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Thanks for the note! I accidently reopened that bug obviously. It's now fixed in hrev19878.
Note:
See TracTickets
for help on using tickets.
Tested with rev16521 under vmware.