Implemented collapsing forked vm_cache object chains when they become unused. This fixes bug #227 by closing that memory and semaphore leak.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19041 a95241bf-73f2-0310-859d-f6bbb57e9c96